--- a/details.html
+++ b/details.html
@@ -2,97 +2,167 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>iPortfolio - Detalhes Conteudo</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-  <!-- validador CSS Files -->
-  <link href="validador/aos/aos.css" rel="stylesheet">
-  <link href="validador/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="validador/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="validador/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="validador/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="validador/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-  <!-- CSS principal -->
-  <link href="css/style.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="JT Design">
+  <meta name="description" content="O melhor em que uma cerveja pode proporcionar">
+  <meta name="keywords" content="Cerveja, lupulo, beer">
 
 
+  <title>Hop Haven</title>
+
+  <link rel="stylesheet" href="bootstrap/aos/aos.css" />
+  <link rel="stylesheet" href="bootstrap/bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="bootstrap/bootstrap-icons/bootstrap-icons.css" />
+  <link rel="stylesheet" href="bootstrap/boxicons/css/boxicons.min.css" />
+  <link rel="stylesheet" href="bootstrap/glightbox/css/glightbox.min.css" />
+  <link rel="stylesheet" href="bootstrap/swiper/swiper-bundle.min.css" />
+
+  <link rel="shortcut icon" href="img/cerveja.png">
+
+  <!-- CSS  -->
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
+  <!-- botao para alternar menu mobile -->
+  <i class="bi bi-list mobile-nav-toggle d-xl-none"> </i>
 
-  <!-- ======= Botão de alter navegação móvel ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
-  <!-- ======= Cabeçalho ======= -->
+  <!-- Cabeçalho -->
   <header id="header">
     <div class="d-flex flex-column">
-
       <div class="profile">
-        <img src="img/logo2.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Hop Haven</a></h1>
+        <img class="img-fluid rounded-circle" src="img//logo2.jpg" alt="" />
+
+        <h1 class="text-light">Hop Haven 🍺</h1>
+
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="details.html" class="instagram" target="_blank">
+            <i class="bx bxl-instagram"> </i>
+          </a>
+          <a href="#" class="facebook" target="_blank">
+            <i class="bx bxl-facebook"> </i>
+          </a>
+
+          <a href="#" class="twitter" target="_blank">
+            <i class="bx bxl-twitter"> </i>
+          </a>
         </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#sobre" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Sobre</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
-    </div>
-  </header><!-- Fim Cabeçalho -->
->
+          <li>
+            <a href="#hero" class="nav-link scrollto active">
+              <i class="bx bx-home"> </i>
+              <span> Home </span>
+            </a>
+          </li>
 
-  <!-- ======= Roda Pé ======= -->
+          <li>
+            <a href="#sobre" class="nav-link scrollto">
+              <i class="bx bx-user"> </i>
+              <span> Sobre </span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#resumo" class="nav-link scrollto">
+              <i class="bx bx-file-blank"> </i>
+              <span> Resumo </span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#portfolio" class="nav-link scrollto">
+              <i class="bx bx-book-content"> </i>
+              <span> Portfolio </span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#servicos" class="nav-link scrollto">
+              <i class="bx bx-server"> </i>
+              <span> Serviços </span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#contato" class="nav-link scrollto">
+              <i class="bx bx-envelope"> </i>
+              <span> Contato </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <!-- fim header -->
+
+
+  <main id="main">
+
+    <section id="breadcrumbs" class="breadcrumbs">
+      <div class="container">
+        <div class="d-flex justify-content-between">
+          <h2>HopHaven</h2>
+          <ol>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>Cervejas</li>
+          </ol>
+        </div>
+      </div>
+    </section>
+
+
+
+  </main>
+
+  <!-- seção hero -->
+  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+    <div class="hero-container" data-aos="fade-in">
+      <h1>Hop Haven Co.</h1>
+      <p>
+        Onde o lúpulo encontra
+        <span class="typed" data-typed-items="seu santuário "> </span>
+      </p>
+    </div>
+  </section>
+  <!-- fim hero -->
+
+  <!-- fim conteudo Principal -->
+
+  <!-- roda pe -->
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright. <strong><span> Portfolio Hop Haven </span></strong>
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        Designed by <a href="#">Meu Nome</a>
+      <div class="creditos">
+        Desenvolvido por <i class="bi bi-github"></i>
+        <a href="https://github.com/guuhferiani" target="_blank"> Timoteo </a>
       </div>
     </div>
-  </footer><!-- End  Footer -->
+  </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <!-- Botao back-to-top -->
+  <a class="back-to-top d-flex align-items-center justify-content-center" href="#">
+    <i class="bi bi-arrow-up-short"> </i>
+  </a>
 
-  <!-- Vendor JS Files -->
-  <script src="validador/purecounter/purecounter_vanilla.js"></script>
-  <script src="validador/aos/aos.js"></script>
-  <script src="validador/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="validador/glightbox/js/glightbox.min.js"></script>
-  <script src="validador/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="validador/swiper/swiper-bundle.min.js"></script>
-  <script src="validador/typed.js/typed.umd.js"></script>
-  <script src="validador/waypoints/noframework.waypoints.js"></script>
-  <script src="validador/php-email-form/validate.js"></script>
+  <!-- JS Bootstrap -->
+  <script src="bootstrap/aos/aos.js"></script>
+  <script src="bootstrap/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="bootstrap/glightbox/js/glightbox.min.js"></script>
+  <script src="bootstrap/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="bootstrap/purecounter/purecounter_vanilla.js"></script>
+  <script src="bootstrap/swiper/swiper-bundle.min.js"></script>
+  <script src="bootstrap/typed.js/typed.umd.js"></script>
+  <script src="bootstrap/waypoints/noframework.waypoints.js"></script>
 
-  <!-- Template Main JS File -->
+  <!-- JS Principal -->
   <script src="js/main.js"></script>
 
 </body>
