--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="JT Design">
+  <meta name="description" content="O melhor em que uma cerveja pode proporcionar">
+  <meta name="keywords" content="Cerveja, lupulo, beer">
+
+
   <title>Hop Haven</title>
 
   <link rel="stylesheet" href="bootstrap/aos/aos.css" />
@@ -12,6 +17,8 @@
   <link rel="stylesheet" href="bootstrap/boxicons/css/boxicons.min.css" />
   <link rel="stylesheet" href="bootstrap/glightbox/css/glightbox.min.css" />
   <link rel="stylesheet" href="bootstrap/swiper/swiper-bundle.min.css" />
+
+  <link rel="shortcut icon" href="img/cerveja.png">
 
   <!-- CSS  -->
   <link rel="stylesheet" href="css/style.css" />
@@ -103,7 +110,7 @@
     </div>
   </section>
   <!-- fim hero -->
-   
+
   <main id="main">
     <section id="sobre" class="sobre">
       <div class="container">
@@ -650,12 +657,12 @@
 
     <section id="contact" class="contact">
       <div class="container">
-         <div class="section-title">
-            <p> Venha nos visitar
-            </p>
-         </div>
+        <div class="section-title">
+          <p> Venha nos visitar
+          </p>
+        </div>
 
-         <div class="row" data-aos="fade-in">
+        <div class="row" data-aos="fade-in">
           <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
 
@@ -677,13 +684,9 @@
                 <p></p>
               </div>
 
-              <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.2218594795995!2d-46.660709424669825!3d-23.560474078800436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59cc32290ce7%3A0x1dd2698085312c92!2sAv.%20Paulista%2C%201811%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001311-200!5e0!3m2!1spt-BR!2sbr!4v1718144810894!5m2!1spt-BR!2sbr" 
-                width="100%" 
-                height="320px" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.2218594795995!2d-46.660709424669825!3d-23.560474078800436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59cc32290ce7%3A0x1dd2698085312c92!2sAv.%20Paulista%2C%201811%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001311-200!5e0!3m2!1spt-BR!2sbr!4v1718144810894!5m2!1spt-BR!2sbr"
+                width="100%" height="320px" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
               </iframe>
 
@@ -700,7 +703,8 @@
 
                 <div class="grupo-form col-md-6">
                   <label for="email">Seu email:</label>
-                  <input type="text" name="email" id="email" class="form-control" placeholder="email@gmail.com" required>
+                  <input type="text" name="email" id="email" class="form-control" placeholder="email@gmail.com"
+                    required>
                 </div>
 
                 <div class="grupo-form col-md-6">
@@ -721,7 +725,7 @@
 
             </form>
           </div>
-         </div>
+        </div>
       </div>
     </section>
 
@@ -731,13 +735,13 @@
   <!-- roda pe -->
   <footer id="footer">
     <div class="container">
-        <div class="copyright">
-            &copy; Copyright. <strong><span> Portfolio Hop Haven </span></strong>
-        </div>
-        <div class="creditos">
-            Desenvolvido por <i class="bi bi-github"></i>
-            <a href="https://github.com/guuhferiani" target="_blank"> Timoteo </a>
-        </div>
+      <div class="copyright">
+        &copy; Copyright. <strong><span> Portfolio Hop Haven </span></strong>
+      </div>
+      <div class="creditos">
+        Desenvolvido por <i class="bi bi-github"></i>
+        <a href="https://github.com/guuhferiani" target="_blank"> Timoteo </a>
+      </div>
     </div>
   </footer>
 
@@ -760,4 +764,5 @@
   <script src="js/main.js"></script>
 
 </body>
+
 </html>
